--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         }
     },
     "require": {
-        "php": "^7.2|^8.0",
+        "php": "^7.2|^8.0|^8.1",
         "guzzlehttp/guzzle": "~6.0|~7.0"
     },
     "require-dev": {
